    * Site filter shows "(local)" in case of non multi-site setup
    * Made "wato folder" columns sortable
    * Hiding site filter in multisite views in single site setups
    * Replaced "wato" sidebar snapin which mixed up WATO and status GUIs with
      the new "wato_foldertree" snapin which only links to the status views
      filtered by the WATO folder.
    * FIX: Fixed auth problem when following logwatch icon links while using
      the form based auth
    * FIX: Fix problem with Umlaut in contact alias
    * FIX: Creating auth.php file on first login dialog based login to ensure
      it exists after login when it is first needed
    * Dashboard: link problem views to *unhandled* views (this was
      inconsistent)
    * Localization: Fixed detection of gettext template file when using the
      local/ hierarchy in OMD

    Mobile:
    * Improved sorting of views in main page 
    * Fix: Use all the availiable space in header
    * Fix: Navigation with Android Hardwarekeys now working
    * Fix: Links to pnp4nagios now work better
    * Fix: Host and Service Icons now finger friendly
    * Fix: Corrected some buildin views

    WATO:
    * Removed IP-Address attribute from folders
    * Supporting localized tag titles
    * Using Username as default value for full names when editing users
    * Snapshot/Factory Reset is possible even with a broken config
    * Added error messages to user edit dialog to prevent notification problems
      caused by incomplete configuration
    * Activate Changes: Wato can also reload instead of restarting nagios
    * Replication: Can now handle replication sites which use the form based auth
    * Replication: Added option to ignore problems with the ssl certificates
                   used in ssl secured replications
    * FIX: Fixed missing folders in "move to" dropdown fields
    * FIX: Fixed "move to target folders" after CSV import