@@ -60,6 +60,7 @@
     * Replaced "wato" sidebar snapin which mixed up WATO and status GUIs with
       the new "wato_foldertree" snapin which only links to the status views
       filtered by the WATO folder.
+    * Added "Dashboard" section to views snapin which shows a list of all dashboards
     * FIX: Fixed auth problem when following logwatch icon links while using
       the form based auth
     * FIX: Fix problem with Umlaut in contact alias
